Bug 181602 - Comet names range display settings do not work
Summary: Comet names range display settings do not work
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Akarsh Simha
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-22 16:08 UTC by Jeamy Lee
Modified: 2009-03-21 22:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeamy Lee 2009-01-22 16:08:21 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.1 
OS:                Linux
Installed from:    Compiled sources

Comet names range display option in the settings do not work. 0 AU is the only possible value.

Workaround:
Change the configuration option in kstarsrc (~/.kde4/share/config/kstarsrc).
Quit Kstars, open kstarsrc, search for "MaxRadCometName" and change the value to what ever you like.
Comment 1 Akarsh Simha 2009-03-21 22:09:14 UTC
SVN commit 942496 by asimha:

Applying Jain Basil's patch (hopefully) fixing 181602

The maximum distance to which comets were to be labelled was
unchangeable earlier. This makes it changeable. I brought down Jain's
limit of 500 AU to 100 AU after some thought.

[Was there some reason to impose this limit earlier?]

Thanks Jain.

BUG: 181602
CCMAIL: kstars-devel@kde.org



 M  +1 -0      opssolarsystem.cpp  
 M  +177 -176  opssolarsystem.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=942496