Applying Jain Basil's patch (hopefully) fixing 181602

The maximum distance to which comets were to be labelled was
unchangeable earlier. This makes it changeable. I brought down Jain's
limit of 500 AU to 100 AU after some thought.

[Was there some reason to impose this limit earlier?]

Thanks Jain.

BUG: 181602
CCMAIL: kstars-devel@kde.org


svn path=/trunk/KDE/kdeedu/kstars/; revision=942496