kstars/options/opssolarsystem.cpp
@@ -33,6 +33,7 @@ OpsSolarSystem::OpsSolarSystem( KStars *_ks )
     connect( showNonePlanets, SIGNAL( clicked() ), this, SLOT( slotSelectPlanets() ) );
 
     kcfg_MagLimitAsteroid->setMaximum( 30.0 );
+    kcfg_MaxRadCometName->setMaximum( 100.0 );
 
     slotAsteroidWidgets( kcfg_ShowAsteroids->isChecked() );
     slotCometWidgets( kcfg_ShowComets->isChecked() );
